--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.6.7",
+    "md5": "^2.3.0",
+    "md5-hash": "^1.0.1",
     "react": "^18.2.0",
     "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
