--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
     "typescript": "^4.4.2",
+    "use-lodash-debounce": "^1.3.0",
     "web-vitals": "^2.1.0",
     "yup": "^1.3.3"
   },
